fix(css): wide select inputs do not run out of screen
fixes #7511

--- a/views/default/elements/layout/columns.css
+++ b/views/default/elements/layout/columns.css
@@ -19,6 +19,7 @@
 	
 	> .elgg-body {
 		flex: 1;
+		min-width: 1%;
 	}
 	
 	> .elgg-sidebar {
